# BananaApi

./: README.md
GameServer/c++/: Makefile  README.md  autogen.sh  banana_server  banana_server.cpp  configure.ac
GameServer/c++/src/: banana_server  byteswap.h  serialize.h
GameServer/cpp/: .gitignore  Makefile.am  configure.ac
GameServer/cpp/src/: Makefile.am  banana_message.h  banana_server.cpp  banana_server.h  serialize.h  testing_client.cpp  util.h
Unity/BananaClient/: BananaClient.cs  BananaClientDef.asmdef  BananaClientImpl.cs  BananaMessage.cs  BytesUtils.cs  Example.cs  NetworkAdpater.cs  SocketUtils.cs  TcpAdapter.cs  Token.cs
Unity/Tests/: Tests.asmdef
Unity/Tests/BananaClient/: TcpAdapterTest.cs
